[gd_scene load_steps=19 format=3 uid="uid://cj1klagkc0po3"]

[ext_resource type="Script" path="res://scripts/gun.gd" id="1_h800g"]
[ext_resource type="Texture2D" uid="uid://b5w3mpb7o34lm" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export1.png" id="2_ky1xt"]
[ext_resource type="Texture2D" uid="uid://0yiqvtfaakiq" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export2.png" id="3_wd27d"]
[ext_resource type="Texture2D" uid="uid://1kxidmg1jlw2" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export3.png" id="4_u15f6"]
[ext_resource type="Texture2D" uid="uid://vdyxbjripr8k" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export4.png" id="5_i3rmg"]
[ext_resource type="Texture2D" uid="uid://3gxj12ilstqc" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export5.png" id="6_dy6bg"]
[ext_resource type="Texture2D" uid="uid://c6duyor4t0dh3" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export6.png" id="7_6mt25"]
[ext_resource type="Texture2D" uid="uid://cyg5ojmvc5ay5" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export7.png" id="8_c4wlm"]
[ext_resource type="Texture2D" uid="uid://bfgcftre53bs4" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export8.png" id="9_6qogq"]
[ext_resource type="Texture2D" uid="uid://coiljjpabjp4n" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export9.png" id="10_w7djo"]
[ext_resource type="Texture2D" uid="uid://cxfyd1csdksdx" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export10.png" id="11_tuxtk"]
[ext_resource type="Texture2D" uid="uid://bnopgodgwxdyj" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export11.png" id="12_j6ujr"]
[ext_resource type="Texture2D" uid="uid://woqc56r73h44" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export12.png" id="13_khe4q"]
[ext_resource type="Texture2D" uid="uid://b1vcorc23woo8" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export13.png" id="14_nh8ll"]
[ext_resource type="Texture2D" uid="uid://ck7c5krk7at8s" path="res://assets/guns/[animated] Shotgun_V1.02_SHELL_OPEN-export14.png" id="15_dvusv"]
[ext_resource type="AudioStream" uid="uid://3yms3pmsvcj8" path="res://assets/guns/sound_fx/20 Gauge Single.mp3" id="16_cnv7m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e26g2"]
radius = 459.017

[sub_resource type="SpriteFrames" id="SpriteFrames_edyki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ky1xt")
}, {
"duration": 1.0,
"texture": ExtResource("3_wd27d")
}, {
"duration": 1.0,
"texture": ExtResource("4_u15f6")
}, {
"duration": 1.0,
"texture": ExtResource("5_i3rmg")
}, {
"duration": 1.0,
"texture": ExtResource("6_dy6bg")
}, {
"duration": 1.0,
"texture": ExtResource("7_6mt25")
}, {
"duration": 1.0,
"texture": ExtResource("8_c4wlm")
}, {
"duration": 1.0,
"texture": ExtResource("9_6qogq")
}, {
"duration": 1.0,
"texture": ExtResource("10_w7djo")
}, {
"duration": 1.0,
"texture": ExtResource("11_tuxtk")
}, {
"duration": 1.0,
"texture": ExtResource("12_j6ujr")
}, {
"duration": 1.0,
"texture": ExtResource("13_khe4q")
}, {
"duration": 1.0,
"texture": ExtResource("14_nh8ll")
}, {
"duration": 1.0,
"texture": ExtResource("15_dvusv")
}],
"loop": true,
"name": &"shoot",
"speed": 15.0
}]

[node name="Gun" type="Area2D"]
position = Vector2(2, -2)
rotation = -6.28319
collision_layer = 0
collision_mask = 2
script = ExtResource("1_h800g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_e26g2")

[node name="WeaponShaft" type="Marker2D" parent="."]
position = Vector2(0, 6.14673e-08)
rotation = 0.0200248
scale = Vector2(0.157143, 0.12)

[node name="Pistol" type="AnimatedSprite2D" parent="WeaponShaft"]
position = Vector2(-1.52588e-05, -1.52588e-05)
scale = Vector2(4.71528, 8.88205)
sprite_frames = SubResource("SpriteFrames_edyki")
animation = &"shoot"
frame_progress = 0.218433

[node name="ShootingPoint" type="Marker2D" parent="WeaponShaft/Pistol"]
unique_name_in_owner = true
position = Vector2(20.5841, -1.28167)
scale = Vector2(2.80938, 3.24842)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_cnv7m")
volume_db = -15.0

[connection signal="animation_looped" from="WeaponShaft/Pistol" to="." method="_on_pistol_animation_looped"]
